# git-controller

./: Cargo.toml  README.md  docker-compose.yaml
client/: Dockerfile
database/: dump.sql
git/: Dockerfile
git-auth-layer/: Cargo.toml  Dockerfile.client  compose.yml
git-repo-manager/: Cargo.toml  README.md
git-repo-manager/src/: main.rs  service.rs
git/git-auth-layer/: README.md
git/git-repo-manager/: .env  Cargo.toml
git/ssh-keys-fuse/: .env  Cargo.toml  README.md
git/ssh-keys-fuse/src/: constants.rs  main.rs  postgres_fs.rs  ssh_key.rs
gitsprout/: Cargo.toml
gitsprout/src/: service.rs
gitstake/: Cargo.toml  Dockerfile.server
gitstake/src/: main.rs
ssh-keys-fuse/: .dockerignore  .env  Cargo.toml  Dockerfile
ssh-keys-fuse/src/: main.rs  postgres_fs.rs
