[package]
name = "git-repo-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
paastech-proto = { git = "https://github.com/paastech-cloud/proto.git", rev = "1520c877f55a6c885e75ee59024c19597b1030a2" }
