[package]
name = "ssh-keys-fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
async-fuse = "0.11.4"
async-trait = "0.1.68"
dotenv = "0.15.0"
dotenvy = "0.15.7"
fuser = "0.12.0"
libc = "0.2.146"
sqlx = { version = "0.6.3", features = [ "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1.28.2", features = [ "full" ] }
